# veille-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  healthcheck.py  logging_config.py  main.py  pyproject.toml
.github/workflows/: ci.yml
adapters/llm/: openrouter.py
adapters/notify/: composite_notifier.py  discord_notifier.py  email_notifier.py  slack_notifier.py
adapters/search/: duckduckgo.py
adapters/social/: scraper.py
adapters/storage/: report_repository.py  snapshot_repository.py
adapters/web/: scraper.py
analysis_agent/: analysis.py
application/: analysis.py  diff.py  discovery.py  notify.py  report.py  scraper.py  social.py
diff_agent/: diff.py
discovery_agent/: discovery.py
docs/adr/: 0001-architecture-hexagonale.md  0002-deploiement-conteneur-unique.md  0003-retry-backoff-tenacity.md  0004-ruff-mypy-ci.md  0005-logging-standard.md  0006-durcissement-api-interne.md  README.md  template.md
domain/: models.py  notification.py  ports.py
notifier/: notify.py
report_agent/: report.py
scraper_agent/: scraper.py
social_agent/: social.py
storage/: snapshot.py
tests/: test_analysis.py  test_diff.py  test_discord_notifier.py  test_discovery.py  test_duckduckgo_search.py  test_email_notifier.py  test_notify.py  test_openrouter_llm.py  test_pipeline_integration.py  test_report.py  test_report_repository.py  test_scraper.py  test_slack_notifier.py  test_snapshot_repository.py  test_social.py  test_social_scraper.py  test_web_scraper.py
ui/: api.py
ui/templates/: index.html
